# open_cyber_glove

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yaml  pyproject.toml  requirements.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: documentation.yaml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  examples.md  faq.md  index.md  license.md  safety_cn.md  safety_en.md
docs/setup/: hardware.md  software.md  user_guide_cn.md  user_guide_en.md
examples/: hello_world.py
faq/: index.html
license/: index.html
open_cyber_glove/: glove.py  sdk.py  utils.py  visualizer.py
safety_cn/: index.html
safety_en/: index.html
search/: search_index.json
setup/software/: index.html
setup/user_guide_en/: index.html
